[package]
name = "installer"
version = "0.1.0"
edition = "2024"

[features]
vendor = []

[dependencies]
anyhow = "1.0.98"
axum = "0.8.3"
bytes = "1.10.1"
clap = { version = "4.5.37", features = ["derive"] }
hyper = "1.6.0"
hyper-util = "0.1.11"
md5 = "0.7.0"
nusb = "0.1.13"
reqwest = { version = "0.12.15", features = ["json"], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.8"
tokio = { version = "1.44.2", features = ["full"] }
tokio-retry2 = "0.5.7"
tokio-stream = "0.1.17"

[target.'cfg(not(target_os = "macos"))'.dependencies.adb_client_libusb]
git = "https://github.com/gaykitty/adb_client.git"
branch = "rayhunter"
default-features = false
features = ["usb"]
package = "adb_client"

[target.'cfg(target_os = "macos")'.dependencies.adb_client_nusb]
git = "https://github.com/gaykitty/adb_client.git"
rev = "5dfbaf27d6e78c9546aa6331a0b6e8ba6cddd0bd"
package = "adb_client"
